# ProjectX-

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  _mixins.py  exercise.py  session.py  template.py  user.py
backend/app/routers/: admin.py  auth.py  dashboard.py  exercises.py  sessions.py  templates.py
backend/app/schemas/: auth.py  dashboard.py  exercise.py  session.py  template.py
backend/app/services/: progression.py  scoring.py  seed.py
backend/app/services/seed_data/: exercises.json
backend/scripts/: seed.py
backend/tests/: test_progression.py  test_scoring.py
docs/: deploy.md  testing.md
infra/: docker-compose.yml
mobile/: .env.example  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(auth)/: login.tsx
mobile/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  settings.tsx  templates.tsx
mobile/app/session/: [id].tsx
mobile/src/api/: client.ts  types.ts
mobile/src/components/: RestTimer.tsx  SetRow.tsx
mobile/src/components/dashboard/: ScoreRing.tsx  WeekStrip.tsx
mobile/src/hooks/: useCountdown.ts
mobile/src/lib/: authStorage.ts  theme.ts
mobile/src/stores/: activeSession.ts  auth.ts
